; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_refresh_matview_datafill.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_refresh_matview_datafill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"unexpected rewrite result for REFRESH MATERIALIZED VIEW\00", align 1
@InvalidSnapshot = common dso_local global i32 0, align 4
@ForwardScanDirection = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*)* @refresh_matview_datafill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refresh_matview_datafill(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32* @copyObject(i32* %12)
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = call i32 @AcquireRewriteLocks(i32* %14, i32 1, i32 0)
  %16 = load i32*, i32** %10, align 8
  %17 = call i32* @QueryRewrite(i32* %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @list_length(i32* %18)
  %20 = icmp ne i32 %19, 1
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32, i32* @ERROR, align 4
  %23 = call i32 @elog(i32 %22, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %3
  %25 = load i32*, i32** %7, align 8
  %26 = call i64 @linitial(i32* %25)
  %27 = inttoptr i64 %26 to i32*
  store i32* %27, i32** %5, align 8
  %28 = call i32 (...) @CHECK_FOR_INTERRUPTS()
  %29 = load i32*, i32** %5, align 8
  %30 = call i32* @pg_plan_query(i32* %29, i32 0, i32* null)
  store i32* %30, i32** %8, align 8
  %31 = call i32 (...) @GetActiveSnapshot()
  %32 = call i32 @PushCopiedSnapshot(i32 %31)
  %33 = call i32 (...) @UpdateActiveSnapshotCommandId()
  %34 = load i32*, i32** %8, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 (...) @GetActiveSnapshot()
  %37 = load i32, i32* @InvalidSnapshot, align 4
  %38 = load i32*, i32** %4, align 8
  %39 = call %struct.TYPE_10__* @CreateQueryDesc(i32* %34, i8* %35, i32 %36, i32 %37, i32* %38, i32* null, i32* null, i32 0)
  store %struct.TYPE_10__* %39, %struct.TYPE_10__** %9, align 8
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %41 = call i32 @ExecutorStart(%struct.TYPE_10__* %40, i32 0)
  %42 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %43 = load i32, i32* @ForwardScanDirection, align 4
  %44 = call i32 @ExecutorRun(%struct.TYPE_10__* %42, i32 %43, i64 0, i32 1)
  %45 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %45, i32 0, i32 0
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  store i32 %49, i32* %11, align 4
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %51 = call i32 @ExecutorFinish(%struct.TYPE_10__* %50)
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %53 = call i32 @ExecutorEnd(%struct.TYPE_10__* %52)
  %54 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %55 = call i32 @FreeQueryDesc(%struct.TYPE_10__* %54)
  %56 = call i32 (...) @PopActiveSnapshot()
  %57 = load i32, i32* %11, align 4
  ret i32 %57
}

declare dso_local i32* @copyObject(i32*) #1

declare dso_local i32 @AcquireRewriteLocks(i32*, i32, i32) #1

declare dso_local i32* @QueryRewrite(i32*) #1

declare dso_local i32 @list_length(i32*) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i64 @linitial(i32*) #1

declare dso_local i32 @CHECK_FOR_INTERRUPTS(...) #1

declare dso_local i32* @pg_plan_query(i32*, i32, i32*) #1

declare dso_local i32 @PushCopiedSnapshot(i32) #1

declare dso_local i32 @GetActiveSnapshot(...) #1

declare dso_local i32 @UpdateActiveSnapshotCommandId(...) #1

declare dso_local %struct.TYPE_10__* @CreateQueryDesc(i32*, i8*, i32, i32, i32*, i32*, i32*, i32) #1

declare dso_local i32 @ExecutorStart(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @ExecutorRun(%struct.TYPE_10__*, i32, i64, i32) #1

declare dso_local i32 @ExecutorFinish(%struct.TYPE_10__*) #1

declare dso_local i32 @ExecutorEnd(%struct.TYPE_10__*) #1

declare dso_local i32 @FreeQueryDesc(%struct.TYPE_10__*) #1

declare dso_local i32 @PopActiveSnapshot(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
